﻿#ChangeLog for P2P-GUI

*P2P-GUI-0.2.1 (2009)
Moritz Warning <mwarning@users.sourceforge.net>
- fix login problem for IE8

*P2P-GUI-0.2.0 (01.09.2009)
Moritz Warning <mwarning@users.sourceforge.net>
- rename project to P2P-GUI
- web server now stores self generated ssl key (public.pem/private.pem)
- add referrer mechanism to login page
- make realm for basic authentification configurable
- fix --write-out-files
- multiple minor fixes
aMule:
- select right protocol version for aMule 2.2.5
- fix settings
Transmission:
- support X-Transmission-Session-Id
   (fix errors from JsonParser)
- better support for sub files
- fix file preview
- all settings are now manageable 
Plex gui:
- add l33t text transform for downloads
- make number of displayed console lines configurable
- remove client selection for settings (simplification)
- add client access name and IP/port to footer
- hide home directory and disable account settings from normal user access
- add auto refresh to logout
Clutch gui:
- update to Transmission 1.74
- better support for sub files
Jay gui:
- fix some broken stuff
- still broken :(

*Web-GMUI-0.1.3 (25.05.2009)
Moritz Warning <mwarning@users.sourceforge.net>
- fix shutdown with ctrl-c on Windows
- JSON RPC rewrite, now with json input and output
aMule:
- support for aMule trunk EC protocol (2.2.4 and 2.2.5)
- better authorization handling
- allow multiple searches
- search removal was broken
MLDonkey:
- fix wrong speed diplay (often displayed 28KB/s)
- omit tags "completesources" and "availability" from search result format data
Clutch gui:
- update to Transmission >1.61 (r8420)
Jay gui:
- Note: currently broken!
- switch to jQuery and new JSON RPC

*Web-GMUI-0.1.2 (24.04.2009)
Moritz Warning <mwarning@users.sourceforge.net>
- save settings on ctrl+c on windows
- add source module to error messages
- make some sockets non-blocking as they should have been from the beginning
Clutch gui:
- update to Transmission 1.52
aMule:
- fix "Invalid id" bug
